// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Local 1`] = `
<span>
  <section
    data-testid="player-avatar"
  >
    <figure
      style="--dimension: 150px; --color: null; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
    >
      <img
        alt="avatar for Joe le clodo"
        class="hasImage"
        height="150"
        src="default"
        width="150"
      />
       
    </figure>
     
    <span
      class="host"
    >
      host
    </span>
     
    <legend>
       
      
    </legend>
  </section>
</span>
`;

exports[`No video 1`] = `
<span>
  <section
    data-testid="player-avatar"
  >
    <figure
      style="--dimension: 150px; --color: null; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
    >
      <img
        alt="avatar for Joe le clodo"
        class="hasImage"
        height="150"
        src="default"
        width="150"
      />
       
    </figure>
     
    <span
      class="host"
    >
      host
    </span>
     
    <legend />
  </section>
</span>
`;

exports[`No video nor avatar 1`] = `
<span>
  <section
    data-testid="player-avatar"
  >
    <figure
      style="--dimension: 150px; --color: null; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
    >
      <img
        alt="avatar for Joe le clodo"
        height="150"
        width="150"
      />
       
      <figcaption>
        Joe le clodo
      </figcaption>
    </figure>
     
    <span
      class="host"
    >
      host
    </span>
     
    <legend />
  </section>
</span>
`;

exports[`Toolshot components/PlayerAvatar.tools.svelte: Local 1`] = `
<span>
  <section
    data-testid="player-avatar"
  >
    <figure
      style="--dimension: 150px; --color: null; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
    >
      <img
        alt="avatar for Joe le clodo"
        class="hasImage"
        height="150"
        src="default"
        width="150"
      />
       
    </figure>
     
    <span
      class="host"
    >
      host
    </span>
     
    <legend>
       
      
    </legend>
  </section>
</span>
`;

exports[`Toolshot components/PlayerAvatar.tools.svelte: No video 1`] = `
<span>
  <section
    data-testid="player-avatar"
  >
    <figure
      style="--dimension: 150px; --color: null; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
    >
      <img
        alt="avatar for Joe le clodo"
        class="hasImage"
        height="150"
        src="default"
        width="150"
      />
       
    </figure>
     
    <span
      class="host"
    >
      host
    </span>
     
    <legend />
  </section>
</span>
`;

exports[`Toolshot components/PlayerAvatar.tools.svelte: No video nor avatar 1`] = `
<span>
  <section
    data-testid="player-avatar"
  >
    <figure
      style="--dimension: 150px; --color: null; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
    >
      <img
        alt="avatar for Joe le clodo"
        height="150"
        width="150"
      />
       
      <figcaption>
        Joe le clodo
      </figcaption>
    </figure>
     
    <span
      class="host"
    >
      host
    </span>
     
    <legend />
  </section>
</span>
`;
